--- a/Game/Game.csproj
+++ b/Game/Game.csproj
@@ -32,6 +32,11 @@
   <ItemGroup>
     <Folder Include="Content\Sprites\UI\" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="Content\Levels\level1.txt">
+        <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
   <Target Name="RestoreDotnetTools" BeforeTargets="Restore">
     <Message Text="Restoring dotnet tools" Importance="High" />
     <Exec Command="dotnet tool restore" />
